--- a/rtms/package.json
+++ b/rtms/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@zoom/rtms": "^0.0.4",
     "express": "^4.18.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "axios": "^1.6.0",
+    "wav": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
