updated README added

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 # =============================================================================
-# ZCC RTMS Zoom App - Unified Environment Configuration
+# ZCC RTMS Zoom App - Environment Configuration
 # =============================================================================
 # Copy this file to .env and fill in your actual values
-# This single .env file is used by all services (frontend, backend, RTMS)
 # =============================================================================
 
 # -----------------------------------------------------------------------------
@@ -11,6 +10,7 @@
 ZOOM_APP_CLIENT_ID=your_client_id_here
 ZOOM_APP_CLIENT_SECRET=your_client_secret_here
 ZOOM_SECRET_TOKEN=your_webhook_secret_token_here
+ZOOM_BEARER_TOKEN=your_bearer_token_here
 
 # -----------------------------------------------------------------------------
 # Zoom Configuration
@@ -25,7 +25,7 @@ PORT=3000
 # Backend API port
 BACKEND_PORT=3001
 # RTMS server port
-RTMS_PORT=3002
+RTMS_PORT=8080
 
 # -----------------------------------------------------------------------------
 # Environment
@@ -33,37 +33,25 @@ RTMS_PORT=3002
 NODE_ENV=development
 
 # -----------------------------------------------------------------------------
-# URLs - ngrok Configuration Guide
+# URLs (Update with your ngrok or production URLs)
 # -----------------------------------------------------------------------------
-# When using ngrok, ONLY update PUBLIC_URL and ZOOM_REDIRECT_URL
-# Keep FRONTEND_URL and RTMS_SERVER_URL as localhost (internal communication)
-#
-# Example with ngrok URL https://abc123.ngrok-free.app:
-#   PUBLIC_URL=https://abc123.ngrok-free.app
-#   ZOOM_REDIRECT_URL=https://abc123.ngrok-free.app/api/auth/callback
-#   FRONTEND_URL=http://localhost:3000  ← Keep as localhost
-#   RTMS_SERVER_URL=http://localhost:3002  ← Keep as localhost
-#   REACT_APP_BACKEND_URL=http://localhost:3001  ← Keep as localhost
-# -----------------------------------------------------------------------------
+# Public URL for backend (where Zoom sends webhooks)
+# For ngrok: https://your-ngrok-id.ngrok-free.dev
+PUBLIC_URL=https://your-ngrok-url.ngrok-free.dev
 
-# ✅ UPDATE THIS: Public URL for backend (where Zoom sends webhooks)
-# For ngrok: https://your-ngrok-id.ngrok-free.app
-PUBLIC_URL=http://localhost:3001
-
-# ❌ KEEP AS LOCALHOST: Frontend URL (internal/browser communication)
+# Frontend URL (for CORS and redirects)
 FRONTEND_URL=http://localhost:3000
 
-# ❌ KEEP AS LOCALHOST: RTMS server URL (internal backend-to-RTMS communication)
-RTMS_SERVER_URL=http://localhost:3002
+# RTMS server URL (internal communication)
+RTMS_SERVER_URL=http://localhost:8080
 
-# ✅ UPDATE THIS: OAuth redirect URL (must match Marketplace configuration)
-# For ngrok: https://your-ngrok-id.ngrok-free.app/api/auth/callback
-ZOOM_REDIRECT_URL=http://localhost:3001/api/auth/callback
+# OAuth redirect URL (must match Marketplace configuration)
+# For ngrok: https://your-ngrok-id.ngrok-free.dev/api/auth/callback
+ZOOM_REDIRECT_URL=https://your-ngrok-url.ngrok-free.dev/api/auth/callback
 
 # -----------------------------------------------------------------------------
 # Frontend Configuration (React env vars must start with REACT_APP_)
 # -----------------------------------------------------------------------------
-# ❌ KEEP AS LOCALHOST: Frontend connects to backend locally
 REACT_APP_BACKEND_URL=http://localhost:3001
 REACT_APP_ZOOM_CLIENT_ID=your_client_id_here
 
@@ -83,14 +71,9 @@ REDIS_ENCRYPTION_KEY=your_32_byte_encryption_key_here
 # =============================================================================
 # 1. Copy this file: cp .env.example .env
 # 2. Get credentials from Zoom Marketplace (Contact Center App)
-# 3. Update ZOOM_APP_CLIENT_ID, ZOOM_APP_CLIENT_SECRET, ZOOM_SECRET_TOKEN
-# 4. If using ngrok:
-#    a. Start ngrok: npm run ngrok (or: ngrok http 3001)
-#    b. Copy HTTPS URL: https://abc123.ngrok-free.app
-#    c. Update ONLY these two URLs in .env:
-#       PUBLIC_URL=https://abc123.ngrok-free.app
-#       ZOOM_REDIRECT_URL=https://abc123.ngrok-free.app/api/auth/callback
-#    d. Keep all other URLs as localhost
-#    e. Update Zoom Marketplace with ngrok URLs
-# 5. Run: npm run dev (starts all services)
+# 3. Update ZOOM_APP_CLIENT_ID, ZOOM_APP_CLIENT_SECRET, ZOOM_SECRET_TOKEN, ZOOM_BEARER_TOKEN
+# 4. Start ngrok: npm run ngrok (or: ngrok http 3001)
+# 5. Update PUBLIC_URL and ZOOM_REDIRECT_URL with your ngrok URL
+# 6. Update Zoom Marketplace with ngrok URLs (Webhook, OAuth, Home URL)
+# 7. Run: npm start (starts all services with Docker)
 # =============================================================================
