webhook receiver base

--- a/.env.example
+++ b/.env.example
@@ -31,19 +31,20 @@ NODE_ENV=development
 # -----------------------------------------------------------------------------
 # URLs Configuration
 # -----------------------------------------------------------------------------
-# Public URL (update this when using ngrok)
+# Public URL - Backend entry point (update this when using ngrok)
 PUBLIC_URL=http://localhost:3001
 
-# Frontend URL (keep as localhost for Docker internal communication)
-FRONTEND_URL=http://localhost:3000
+# Frontend URL - Where OAuth redirects after success (should match PUBLIC_URL)
+# Backend proxies all requests to frontend, so this should be the backend URL
+FRONTEND_URL=http://localhost:3001
 
-# Frontend Internal URL (Docker service name)
+# Frontend Internal URL (Docker service name - internal only)
 FRONTEND_INTERNAL_URL=http://frontend:3000
 
-# RTMS server URL (Docker service name or localhost)
+# RTMS server URL (Docker service name - internal only)
 RTMS_SERVER_URL=http://rtms:8080
 
-# OAuth redirect URL (update this when using ngrok)
+# OAuth redirect URL (update this when using ngrok, must match Zoom Marketplace)
 ZOOM_REDIRECT_URL=http://localhost:3001/api/auth/callback
 
 # Frontend backend URL
@@ -60,9 +61,14 @@ SESSION_SECRET=your_random_session_secret_change_in_production
 # =============================================================================
 # 1. Start ngrok: npm run ngrok
 # 2. Copy the HTTPS URL (e.g., https://abc123.ngrok-free.app)
-# 3. Update these two variables:
+# 3. Update these THREE variables with the ngrok URL:
 #    PUBLIC_URL=https://abc123.ngrok-free.app
+#    FRONTEND_URL=https://abc123.ngrok-free.app
 #    ZOOM_REDIRECT_URL=https://abc123.ngrok-free.app/api/auth/callback
-# 4. Keep all other URLs as localhost or Docker service names
-# 5. Update Zoom Marketplace configuration with ngrok URLs
+# 4. Keep FRONTEND_INTERNAL_URL and RTMS_SERVER_URL unchanged (Docker internal)
+# 5. Update Zoom Marketplace with:
+#    - Home URL: https://abc123.ngrok-free.app
+#    - Redirect URL: https://abc123.ngrok-free.app/api/auth/callback
+#    - Event notification URL: https://abc123.ngrok-free.app/api/webhooks/zoom
+# 6. Restart containers: npm restart
 # =============================================================================
