OAuth refresh logic added-local storage

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,6 @@
 ZOOM_APP_CLIENT_ID=your_client_id_here
 ZOOM_APP_CLIENT_SECRET=your_client_secret_here
 ZOOM_SECRET_TOKEN=your_webhook_secret_token_here
-ZOOM_BEARER_TOKEN=your_bearer_token_here
 
 # Server Ports
 PORT=3000                    # Frontend React dev server port
@@ -22,6 +21,9 @@ ZOOM_REDIRECT_URL=https://your-ngrok-url.ngrok-free.app/api/auth/
 FRONTEND_INTERNAL_URL=http://frontend:3000
 RTMS_SERVER_URL=http://rtms:8080
 BACKEND_URL=http://backend:3001
+
+# Redis (Session Storage)
+REDIS_URL=redis://redis:6379
 
 # React App Configuration
 REACT_APP_BACKEND_URL=http://localhost:3001
