--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "connect-redis": "^9.0.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "http-proxy-middleware": "^3.0.5"
+    "http-proxy-middleware": "^3.0.5",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
